--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "uninstall": "^0.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,5 +25,6 @@
   ],
   "devDependencies": {
     "firebase": "^5.7.0"
-  }
+  },
+  "homepage": "http://lauracoombs07.github.io/fun-foods-friends"
 }
